--- a/mia/Views/Discovery/Content/HXDiscoveryCardView.xib
+++ b/mia/Views/Discovery/Content/HXDiscoveryCardView.xib
@@ -26,6 +26,9 @@
                     <constraints>
                         <constraint firstAttribute="width" secondItem="ZlF-TJ-5uI" secondAttribute="height" multiplier="1:1" id="kHw-qo-LX1"/>
                     </constraints>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="kVK-U8-tA3"/>
+                    </connections>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgq-mw-184" userLabel="Share Content View">
                     <rect key="frame" x="15" y="335" width="290" height="90"/>
