--- a/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
+++ b/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -10,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXProfileDetailHeader">
             <connections>
                 <outlet property="avatar" destination="iD7-gz-xvd" id="I6n-lV-4vY"/>
+                <outlet property="containerView" destination="iN0-l3-epB" id="sTO-LT-VrY"/>
                 <outlet property="fansCountLabel" destination="FjZ-9c-xp3" id="bIm-Oy-rrg"/>
                 <outlet property="followButton" destination="DnW-Ns-RyP" id="avF-yi-RWl"/>
                 <outlet property="followCountLabel" destination="RAj-l7-XP7" id="RNN-Lt-Ti0"/>
@@ -21,11 +22,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="260"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iD7-gz-xvd" customClass="HXIBImageView">
-                    <rect key="frame" x="145" y="15" width="86" height="86"/>
+                    <rect key="frame" x="145" y="85" width="86" height="86"/>
                     <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="86" id="Pny-4B-9UY"/>
@@ -44,7 +45,7 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ze-VU-eKi">
-                    <rect key="frame" x="59" y="116" width="258" height="22"/>
+                    <rect key="frame" x="59" y="186" width="258" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="zWW-RF-asG"/>
                     </constraints>
@@ -53,7 +54,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fF1-DD-tNx">
-                    <rect key="frame" x="130" y="153" width="115" height="18"/>
+                    <rect key="frame" x="130" y="223" width="115" height="18"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wPO-Ib-K6v">
                             <rect key="frame" x="0.0" y="0.0" width="42" height="18"/>
@@ -140,7 +141,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnW-Ns-RyP" customClass="HXIBButton">
-                    <rect key="frame" x="88" y="201" width="200" height="40"/>
+                    <rect key="frame" x="88" y="271" width="200" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="1sw-Mf-FHB"/>
                         <constraint firstAttribute="width" constant="200" id="TtA-op-ceS"/>
@@ -165,7 +166,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0xG-sy-V2M" userLabel="Message Prompt View" customClass="HXIBView">
-                    <rect key="frame" x="130" y="205" width="117" height="32"/>
+                    <rect key="frame" x="130" y="275" width="117" height="32"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v7P-Wf-oKq" customClass="HXIBImageView">
                             <rect key="frame" x="1" y="1" width="30" height="30"/>
@@ -225,11 +226,11 @@
                     </connections>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.92549019610000005" green="0.92549019610000005" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="DnW-Ns-RyP" firstAttribute="top" secondItem="fF1-DD-tNx" secondAttribute="bottom" constant="30" id="5Jp-aU-svh"/>
                 <constraint firstItem="3ze-VU-eKi" firstAttribute="centerX" secondItem="iD7-gz-xvd" secondAttribute="centerX" id="5Qd-l2-FoD"/>
-                <constraint firstItem="iD7-gz-xvd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="7Ou-jb-hMd"/>
+                <constraint firstItem="iD7-gz-xvd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="85" id="7Ou-jb-hMd"/>
                 <constraint firstItem="3ze-VU-eKi" firstAttribute="top" secondItem="iD7-gz-xvd" secondAttribute="bottom" constant="15" id="HSs-fo-Jvi"/>
                 <constraint firstItem="fF1-DD-tNx" firstAttribute="top" secondItem="3ze-VU-eKi" secondAttribute="bottom" constant="15" id="Ql6-YC-zjO"/>
                 <constraint firstItem="fF1-DD-tNx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dSY-L7-gsH"/>
